Fix element spacing

--- a/styles.css
+++ b/styles.css
@@ -25,13 +25,13 @@ body {
   position: relative;
   flex: 1;
   flex-direction: column;
-  flex: 0 0 45%;
+  flex: 0 0 40%;
   color: white;
 }
 
 .background_img {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   object-fit: cover;
 }
 
@@ -74,6 +74,11 @@ body {
   font-weight: bold;
   width: 100%;
   padding-left: 5%;
+  margin: 10% 0 8% 0;
+
+  & :first-child {
+    margin-bottom: 2%;
+  }
 }
 
 .description_container p {
@@ -81,16 +86,18 @@ body {
 }
 
 .account_info_container {
-
   width: 100%;
   background-color: rgb(255, 255, 255);
   box-shadow: #0000003d 0px 3px 10px;
+  padding-top: 3%;
+  padding-bottom: 3%;
   padding-left: 5%;
 }
 
 .signup_form {
   display: flex;
   flex-wrap: wrap;
+  max-width: 60%;
 
   & div {
     display: flex;
@@ -111,7 +118,8 @@ body {
 }
 
 .submit_button_container {
-  padding-left: 5%;;
+  padding-left: 5%;
+  padding-top: 5%;
 }
 
 .form_row {
